@@ -26,13 +26,15 @@ package org.ngrinder.sm;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 
-import org.junit.AfterClass;
+import junit.framework.Assert;
+
+import org.apache.commons.io.IOUtils;
 import org.junit.BeforeClass;
-import org.junit.Ignore;
 import org.junit.Test;
 
 /**
@@ -41,56 +43,62 @@ import org.junit.Test;
  * @since 3.0
  */
 public class SecurityManagerTest {
-	
-	private static final String tmpDir = "tmp"; 
+
+	public static void main(String[] args) {
+
+		SecurityManagerTest.init();
+		SecurityManagerTest smt = new SecurityManagerTest();
+		smt.testNGrinderSecurityManager1();
+		smt.testNGrinderSecurityManager2();
+	}
+
+	private static final String PATH = new File("/").getAbsolutePath();
 
 	@BeforeClass
-	public static void init() throws IOException {
-		System.setProperty("ngrinder.exec.path", new File(tmpDir).getAbsolutePath());
-		File tmpDirFile = new File(tmpDir);
-		tmpDirFile.createNewFile();
-		File inputFile = new File(tmpDir + "/input.txt");
-		inputFile.createNewFile();
-		BufferedWriter fos = new BufferedWriter(new FileWriter(inputFile));
-		fos.write("Fir line string.\n");
-		fos.write("second line string.\n");
-		System.setProperty("ngridner.etc.hosts", "10.34.63.53");
-
+	// @Ignore
+	public static void init() {
+		System.setProperty("ngrinder.exec.path", PATH);
+		System.setProperty("ngrinder.etc.hosts", "10.34.64.36,CN14748-D-1:127.0.0.1,localhost:127.0.0.1");
+		System.setProperty("ngrinder.console.ip", "10.34.63.53");
+		// -Djava.security.manager=org.ngrinder.sm.NGrinderSecurityManager
 		System.setSecurityManager(new NGrinderSecurityManager());
-	}
-	
-	@AfterClass
-	public static void after() {
-		new File(tmpDir).delete();
 	}
 
 	@Test
-	@Ignore
+	// @Ignore
 	public void testNGrinderSecurityManager1() {
 		System.out.println(new File("hell").getAbsolutePath());
 		System.out.println(System.getProperty("user.home"));
 	}
 
 	@Test
-	@Ignore
+	// @Ignore
 	public void testNGrinderSecurityManager2() {
+		boolean readTag = false, writeTag = false;
+		BufferedReader fis = null;
+		BufferedWriter fos = null;
 		try {
-			BufferedReader fis = new BufferedReader(new FileReader(tmpDir + "/input.txt"));
-			BufferedWriter fos = new BufferedWriter(new FileWriter(tmpDir + "/output.txt"));
-			String inputString;
-			while ((inputString = fis.readLine()) != null) {
-				fos.write(inputString);
-				fos.write('\n');
-			}
-			fis.close();
-			fos.close();
+			fis = new BufferedReader(new FileReader(PATH + "/input.txt"));
+		} catch (FileNotFoundException ioe) {
+			readTag = true;
+		} finally {
+			IOUtils.closeQuietly(fis);
+		}
+		Assert.assertTrue(readTag);
+
+		try {
+			fos = new BufferedWriter(new FileWriter(PATH + "/output.txt"));
+			fos.write("Hello SecurityManager.");
 		} catch (IOException ioe) {
 			System.out.println("I/O failed for SecurityManagerTest.");
 			System.err.println(ioe);
 		} catch (SecurityException e) {
-			System.out.println("Do not have the file write access in \"ngrinder.exec.path\"");
-			System.err.println(e);
+			System.err.println("Do not have the file write access in \"ngrinder.exec.path\"");
+			writeTag = true;
+		} finally {
+			IOUtils.closeQuietly(fos);
 		}
+		Assert.assertTrue(writeTag);
 	}
 
 }
